terraform-ansible/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/react-java0mysql-app-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: example
            - name: MYSQL_ROOT_PASSWORD
              value: db-57xsl
          image: arielguez/mysql:53
          name: db
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysqldb
      restartPolicy: Always
      volumes:
        - name: mysqldb
          persistentVolumeClaim:
            claimName: mysqldb
